[package]
name = "local-oss-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-multipart = "0.7.2"
tokio = { version = "1.34.0", features = ["full"] }
config = "0.15.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "2.2.2"
tar = "0.4.43"
flate2 = "1.0.35"
env_logger = "0.11.6"
log = "0.4.20"
futures = "0.3.29"
anyhow = "1.0.75"
thiserror = "2.0.11"
